force-app/main/default/objects/Rupture_Disc__c/fields/DerateType__c.field-meta.xml
<CustomField>
    <fullName>DerateType__c</fullName>
    <label>DerateType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAL</fullName>
            </value>
            <value>
                <fullName>MCX</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>RCS</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
            <value>
                <fullName>TEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>