force-app/main/default/objects/Rupture_Disc__c/fields/Disc_Material_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Disc_Material_of_Construction__c</fullName>
    <label>Disc Material of Construction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>