force-app/main/default/objects/Rupture_Disc__c/fields/Disc_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Disc_Thickness__c</fullName>
    <label>Disc Thickness</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>