force-app/main/default/objects/Rupture_Disc__c/fields/Drawing_Outside_Config__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Outside_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawing to be created outside of Config</label>
    <type>Checkbox</type>
</CustomField>