force-app/main/default/objects/Rupture_Disc__c/fields/Dryness_of_Wet_Steam__c.field-meta.xml
<CustomField>
    <fullName>Dryness_of_Wet_Steam__c</fullName>
    <label>% Dryness of Wet Steam</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>