force-app/main/default/objects/Rupture_Disc__c/fields/Edit_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>Edit_QuoteLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit QuoteLine</label>
    <type>Checkbox</type>
</CustomField>