force-app/main/default/objects/Rupture_Disc__c/fields/Electro_polish__c.field-meta.xml
<CustomField>
    <fullName>Electro_polish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electro-polish</label>
    <type>Checkbox</type>
</CustomField>