force-app/main/default/objects/Rupture_Disc__c/fields/End_Connection__c.field-meta.xml
<CustomField>
    <fullName>End_Connection__c</fullName>
    <label>End Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>