force-app/main/default/objects/Rupture_Disc__c/fields/Enter_Different_Temperature_Units__c.field-meta.xml
<CustomField>
    <fullName>Enter_Different_Temperature_Units__c</fullName>
    <label>Enter Different Temperature Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deg F</fullName>
            </value>
            <value>
                <fullName>Deg C</fullName>
            </value>
            <value>
                <fullName>Deg R</fullName>
            </value>
            <value>
                <fullName>Deg K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>