force-app/main/default/objects/Rupture_Disc__c/fields/Enter_Different_Temperature_Value__c.field-meta.xml
<CustomField>
    <fullName>Enter_Different_Temperature_Value__c</fullName>
    <label>Enter Different Temperature Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>