force-app/main/default/objects/Rupture_Disc__c/fields/Enter_Relieving_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>Enter_Relieving_Pressure_Value__c</fullName>
    <label>Enter Relieving Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>