force-app/main/default/objects/Rupture_Disc__c/fields/Evaluation_Per_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Per_Proposal__c</fullName>
    <formula>CASE(Evaluation_Per__c,
  &quot;ASME Gas/Vapor&quot;, &quot;ASME Section VIII Division 1 – Gas/Vapor&quot;,
  &quot;ASME Water&quot;, &quot;ASME Section VIII Division 1 – Water&quot;,
  &quot;ASME Steam&quot;, &quot;ASME Section VIII Division 1 – Dry Saturated Steam&quot;,
  &quot;API Gas/Vapor&quot;, &quot;API Standard 520 Part 1 – Gas/Vapor&quot;,
  &quot;API Liquid&quot;, &quot;API Standard 520 Part 1 - Liquid&quot;,
  &quot;API Steam&quot;, &quot;API Standard 520 Part 1 - Steam&quot;,
  &quot;ISO Gas/Vapor&quot;, &quot;ISO 4126-6 – Gas/Vapor&quot;,
  &quot;ISO Liquid&quot;, &quot;ISO 4126-6 - Liquid&quot;,
  &quot;ISO Dry Steam&quot;, &quot;ISO 4126-6 - Steam&quot;,
  &quot;ISO Wet Steam&quot;, &quot;ISO 4126-6 – Saturated Steam&quot;,
  &quot;API Omega Method 2 Phase Flashing or Nonflashing&quot;, &quot;API Omega Method 2 Phase Flashing or Nonflashing&quot;,
  &quot;API Omega Method Subcooled Liquid&quot;, &quot;API Omega Method Subcooled Liquid&quot;,
  &quot;Fauske 2 Phase Gas-Liquid&quot;, &quot;Fauske 2 Phase Gas-Liquid&quot;,
  &quot;Fauske 2 Phase Vapor-Liquid&quot;, &quot;Fauske 2 Phase Vapor-Liquid&quot;,
  &quot;Fauske 2 Phase Hybrid Gas-Vapor-Liquid&quot;, &quot;Fauske 2 Phase Hybrid Gas-Vapor-Liquid&quot;,
  &quot;Fauske All Liquid Flashing&quot;, &quot;Fauske All Liquid Flashing&quot;,
  &quot;No Evaluation Specified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Per Proposal</label>
    <type>Text</type>
</CustomField>