force-app/main/default/objects/Rupture_Disc__c/fields/Final_Assembly_Location_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Final_Assembly_Location_Requirements__c</fullName>
    <label>Final Assembly Location Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>No restrictions</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>USA only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>