force-app/main/default/objects/Rupture_Disc__c/fields/Flow_Area__c.field-meta.xml
<CustomField>
    <fullName>Flow_Area__c</fullName>
    <label>Flow Area</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>