force-app/main/default/objects/Rupture_Disc__c/fields/Gas_Group__c.field-meta.xml
<CustomField>
    <fullName>Gas_Group__c</fullName>
    <label>Gas Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IIA</fullName>
            </value>
            <value>
                <fullName>IIB</fullName>
            </value>
            <value>
                <fullName>IIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>