force-app/main/default/objects/Rupture_Disc__c/fields/General_Environmental_Compliance__c.field-meta.xml
<CustomField>
    <fullName>General_Environmental_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Environmental Compliance</label>
    <type>Checkbox</type>
</CustomField>