force-app/main/default/objects/Rupture_Disc__c/fields/Halogen_Based_Restrictions_for_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Halogen_Based_Restrictions_for_cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Halogen Based Restrictions for cleaning</label>
    <type>Checkbox</type>
</CustomField>