force-app/main/default/objects/Rupture_Disc__c/fields/Hydrotest__c.field-meta.xml
<CustomField>
    <fullName>Hydrotest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hydrotest</label>
    <type>Checkbox</type>
</CustomField>