force-app/main/default/objects/Rupture_Disc__c/fields/Individual_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Individual_Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Packaging</label>
    <type>Checkbox</type>
</CustomField>