force-app/main/default/objects/Rupture_Disc__c/fields/Inlet_Connection__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Connection__c</fullName>
    <label>Inlet Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>