force-app/main/default/objects/Rupture_Disc__c/fields/Is_Saturated__c.field-meta.xml
<CustomField>
    <fullName>Is_Saturated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>unchecked considered as subcooled</inlineHelpText>
    <label>Is Saturated</label>
    <type>Checkbox</type>
</CustomField>