force-app/main/default/objects/Rupture_Disc__c/fields/Is_there_a_liquid_relief_scenario__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_liquid_relief_scenario__c</fullName>
    <label>Is there a liquid relief scenario?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>