force-app/main/default/objects/Rupture_Disc__c/fields/IsConfigFinished__c.field-meta.xml
<CustomField>
    <fullName>IsConfigFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfigFinished</label>
    <type>Checkbox</type>
</CustomField>