force-app/main/default/objects/Rupture_Disc__c/fields/Isentropic_coefficient_gas__c.field-meta.xml
<CustomField>
    <fullName>Isentropic_coefficient_gas__c</fullName>
    <label>Isentropic coefficient, gas</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>