force-app/main/default/objects/Rupture_Disc__c/fields/Liquid_density__c.field-meta.xml
<CustomField>
    <fullName>Liquid_density__c</fullName>
    <label>Liquid density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>