force-app/main/default/objects/Rupture_Disc__c/fields/Liquid_Density_at_inlet__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Density_at_inlet__c</fullName>
    <label>Liquid Density at inlet</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>