force-app/main/default/objects/Rupture_Disc__c/fields/Liquid_density_Units__c.field-meta.xml
<CustomField>
    <fullName>Liquid_density_Units__c</fullName>
    <label>Liquid density Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lb/in3</fullName>
            </value>
            <value>
                <fullName>lb/ft3</fullName>
            </value>
            <value>
                <fullName>lb/yd3</fullName>
            </value>
            <value>
                <fullName>lb/gallon (Imperial)</fullName>
            </value>
            <value>
                <fullName>lb/gallon (U.S.)</fullName>
            </value>
            <value>
                <fullName>kg/m3</fullName>
            </value>
            <value>
                <fullName>kg/L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>