force-app/main/default/objects/Rupture_Disc__c/fields/Liquid_specific_heat__c.field-meta.xml
<CustomField>
    <fullName>Liquid_specific_heat__c</fullName>
    <label>Liquid specific heat in J/kg*K</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>