force-app/main/default/objects/Rupture_Disc__c/fields/Mark_Pack_Clean__c.field-meta.xml
<CustomField>
    <fullName>Mark_Pack_Clean__c</fullName>
    <label>Mark/Pack/Clean</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M2</fullName>
                <label>Clean with Blue Gold ® Cleaner, Individually package, and Label Each Package and Box</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>Clean with Liquid Oxygen, Individually package, and Label Each Package and Box</label>
            </value>
            <value>
                <fullName>M4</fullName>
                <label>Standard Cleaning and Pack in Labeled Bag</label>
            </value>
            <value>
                <fullName>M5</fullName>
                <label>Standard Cleaning, Pack in Labeled Bag, and Individually Package</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>Mark tag number on each tag and Individually Package</label>
            </value>
            <value>
                <fullName>Sanitary Requirements per MP-8001</fullName>
                <label>Sanitary Service Disc</label>
            </value>
            <value>
                <fullName>Mfg per MP-8002</fullName>
                <label>Sanitary Requirements for Merck</label>
            </value>
            <value>
                <fullName>No metal seals or slot covers</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>