force-app/main/default/objects/Rupture_Disc__c/fields/Material_Armor_Ring2__c.field-meta.xml
<CustomField>
    <fullName>Material_Armor_Ring2__c</fullName>
    <label>Material of Armor Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>