force-app/main/default/objects/Rupture_Disc__c/fields/Material_Dent_Protector__c.field-meta.xml
<CustomField>
    <fullName>Material_Dent_Protector__c</fullName>
    <label>Material of Dent Protector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>