force-app/main/default/objects/Rupture_Disc__c/fields/Material_Disc__c.field-meta.xml
<CustomField>
    <fullName>Material_Disc__c</fullName>
    <label>Material of Disc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>