force-app/main/default/objects/Rupture_Disc__c/fields/Material_Girdle__c.field-meta.xml
<CustomField>
    <fullName>Material_Girdle__c</fullName>
    <label>Material of Girdle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>