force-app/main/default/objects/Rupture_Disc__c/fields/Material_Handling_Support__c.field-meta.xml
<CustomField>
    <fullName>Material_Handling_Support__c</fullName>
    <label>Material of Handling Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>