force-app/main/default/objects/Rupture_Disc__c/fields/Material_Hi_Temp_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Material_Hi_Temp_Assembly__c</fullName>
    <label>Material of Hi Temp Assembly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>