force-app/main/default/objects/Rupture_Disc__c/fields/Material_Holddown_Ring__c.field-meta.xml
<CustomField>
    <fullName>Material_Holddown_Ring__c</fullName>
    <label>Material of Holddown Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>