force-app/main/default/objects/Rupture_Disc__c/fields/Material_Inlet_O_Ring__c.field-meta.xml
<CustomField>
    <fullName>Material_Inlet_O_Ring__c</fullName>
    <label>Material of Inlet O Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>