force-app/main/default/objects/Rupture_Disc__c/fields/Material_Integral_BDI__c.field-meta.xml
<CustomField>
    <fullName>Material_Integral_BDI__c</fullName>
    <label>Material of Integral BDI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>