force-app/main/default/objects/Rupture_Disc__c/fields/Material_Knifeblade__c.field-meta.xml
<CustomField>
    <fullName>Material_Knifeblade__c</fullName>
    <label>Material of Knifeblade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>